@@ -1,7 +1,7 @@
 source :gemcutter
 
-gem "activerecord", ">= 2.3.5"
-gem "activesupport", ">= 2.3.5"
+gem "activerecord", ">= 2.3.8", :require => "active_record"
+gem "activesupport", ">= 2.3.8"
 gem "rspec", ">= 1.3.0"
 gem "fixjour", "0.4.1"
 gem "acts_as_fu", "0.0.5"
