@@ -1,3 +1,6 @@
+2010-05-26
+ - Silence metaclass deprecation warnings in active support 2.3.8
+
 2010-05-04
  - When calling ActiveFile::Base.reload do not actually perform the reload if nothing has been modified unless you call reload(true) to force (Michael Schubert)
 
